Fixed alignment of logo in header

--- a/styles/_modules.scss
+++ b/styles/_modules.scss
@@ -11,7 +11,7 @@
     text-transform: uppercase;
     display: inline-block;
     a {
-      padding: 15%;
+      padding: 5%;
     }
   }
   @include breakpoint(special) {
